# expressive-furhat

./: .gitignore  README.md  analyse_annotations.py  config.py  create_prolific_data.py  ground_truth.csv  main.py  prolific_data.csv  prolific_result.csv  pyproject.toml  requirements.txt  webservice.py
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
data/: ground_truth.csv  prolific_data.csv  prolific_result.csv
expressive_furhat/: background_gestures.py  expressive_remote_api.py  gaze_aversion.py  gesture_generation.py  prompts.py
tests/: conftest.py  test_background_gestures.py  test_expressive_remote_api.py  test_gaze_aversion.py  test_gesture_generation.py  test_integration.py
